// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should type error 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: .33333rem;
  margin-right: 0;
  margin-left: 1rem;
  cursor: pointer;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  margin-top: 0.66667rem;
  margin-bottom: 0.66667rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  width: inherit;
  opacity: 0;
  height: 0;
  -webkit-transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  box-sizing: border-box;
  font-size: 1rem;
  background-color: var(--px-alert-label-background-color--error,yellow);
  color: var(--px-alert-label-text-color--error,black);
  opacity: 1;
  height: var(--px-notification-height,5.33333rem);
}

@media screen and (min-width:45em) {
  .c0 {
    height: var(--px-notification-height,2.66667rem);
  }
}

<div
  className="c0"
  type="error"
>
  <div
    className="c1"
  >
    Message
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Notification should type healthy 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: .33333rem;
  margin-right: 0;
  margin-left: 1rem;
  cursor: pointer;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  margin-top: 0.66667rem;
  margin-bottom: 0.66667rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  width: inherit;
  opacity: 0;
  height: 0;
  -webkit-transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  box-sizing: border-box;
  font-size: 1rem;
  background-color: var(--px-alert-label-background-color--healthy,green);
  color: var(--px-alert-label-text-color--healthy,white);
  opacity: 1;
  height: var(--px-notification-height,5.33333rem);
}

@media screen and (min-width:45em) {
  .c0 {
    height: var(--px-notification-height,2.66667rem);
  }
}

<div
  className="c0"
  type="healthy"
>
  <div
    className="c1"
  >
    Message
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Notification should type important 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: .33333rem;
  margin-right: 0;
  margin-left: 1rem;
  cursor: pointer;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  margin-top: 0.66667rem;
  margin-bottom: 0.66667rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  width: inherit;
  opacity: 0;
  height: 0;
  -webkit-transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  box-sizing: border-box;
  font-size: 1rem;
  background-color: var(--px-alert-label-background-color--important,red);
  color: var(--px-alert-label-text-color--important,white);
  opacity: 1;
  height: var(--px-notification-height,5.33333rem);
}

@media screen and (min-width:45em) {
  .c0 {
    height: var(--px-notification-height,2.66667rem);
  }
}

<div
  className="c0"
  type="important"
>
  <div
    className="c1"
  >
    Message
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Notification should type info 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: .33333rem;
  margin-right: 0;
  margin-left: 1rem;
  cursor: pointer;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  margin-top: 0.66667rem;
  margin-bottom: 0.66667rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  width: inherit;
  opacity: 0;
  height: 0;
  -webkit-transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  box-sizing: border-box;
  font-size: 1rem;
  background-color: var(--px-alert-label-background-color--information,blue);
  color: var(--px-alert-label-text-color--information,white);
  opacity: 1;
  height: var(--px-notification-height,5.33333rem);
}

@media screen and (min-width:45em) {
  .c0 {
    height: var(--px-notification-height,2.66667rem);
  }
}

<div
  className="c0"
  type="info"
>
  <div
    className="c1"
  >
    Message
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Notification should type unknown 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: .33333rem;
  margin-right: 0;
  margin-left: 1rem;
  cursor: pointer;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  margin-top: 0.66667rem;
  margin-bottom: 0.66667rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  width: inherit;
  opacity: 0;
  height: 0;
  -webkit-transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  box-sizing: border-box;
  font-size: 1rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  opacity: 1;
  height: var(--px-notification-height,5.33333rem);
}

@media screen and (min-width:45em) {
  .c0 {
    height: var(--px-notification-height,2.66667rem);
  }
}

<div
  className="c0"
  type="unknown"
>
  <div
    className="c1"
  >
    Message
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Notification should type warning 1`] = `
.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: .33333rem;
  margin-right: 0;
  margin-left: 1rem;
  cursor: pointer;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  margin-top: 0.66667rem;
  margin-bottom: 0.66667rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  width: inherit;
  opacity: 0;
  height: 0;
  -webkit-transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  transition: var(--px-notification-transition,height .3s ease-in-out,opacity .3s ease-in-out);
  box-sizing: border-box;
  font-size: 1rem;
  background-color: var(--px-alert-label-background-color--warning,orange);
  color: var(--px-alert-label-text-color--warning,white);
  opacity: 1;
  height: var(--px-notification-height,5.33333rem);
}

@media screen and (min-width:45em) {
  .c0 {
    height: var(--px-notification-height,2.66667rem);
  }
}

<div
  className="c0"
  type="warning"
>
  <div
    className="c1"
  >
    Message
  </div>
  <div
    className="c2"
  />
</div>
`;
